tests/cases_invalid/var_defs/undefined_values/.expected
error: could not find `undefined` value
 --> ./cases_invalid/var_defs/undefined_values/main.shd:2:17
  |
2 |     var value = undefined;
  |                 ^^^^^^^^^ undefined identifier
  |
